check for duplicated rows in the crop prediction notebook

--- a/crop_prediction.ipynb
+++ b/crop_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3bc042fd",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "66824040",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('Crop_recommendation.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "07862394",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>P</th>\n",
+       "      <th>K</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>ph</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [N, P, K, temperature, humidity, ph, rainfall, label]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.duplicated()]"
    ]
   },
   {
@@ -1355,14 +1412,6 @@
    "source": [
     "pipeline.predict([[78, 48, 22, 23.08974909, 63.10459626, 5.588650585,70.43473609]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfce7f71",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
